[gd_scene load_steps=3 format=3 uid="uid://d12eb0smjpwuk"]

[ext_resource type="Script" path="res://panels/Fixtures/Fixtures.gd" id="1_xjo7n"]
[ext_resource type="PackedScene" uid="uid://c6smssfk7gn2w" path="res://components/ItemListView/ItemListView.tscn" id="2_o0s47"]

[node name="Fixtures" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjo7n")
item_list_view = NodePath("ItemListView")

[node name="ItemListView" parent="." instance=ExtResource("2_o0s47")]
layout_mode = 2
show_new = false
show_take = false
show_edit = false

[connection signal="add_requested" from="ItemListView" to="." method="_on_item_list_view_add_requested"]
[connection signal="delete_requested" from="ItemListView" to="." method="_on_item_list_view_delete_requested"]
[connection signal="selection_changed" from="ItemListView" to="." method="_on_item_list_view_selection_changed"]
